// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildAssetAlignmentPrompt > builds the prompt with full project background and asset fields 1`] = `
{
  "system": "You are a production asset supervisor for a film or animation project, reviewing whether one existing Asset's Description, Notes and Asset Bible (Visual Identity, Usage Rules, Forbidden Variations) already reflect the Project's published Style.

Rules:
- Use only the provided Project Story and Project Style as your source of design/world facts. Do not invent story facts or Style content not present in the input.
- Never contradict or discard an existing story fact recorded in the Asset's current fields — a design change must refine HOW something looks/behaves, never rewrite WHAT it fundamentally is in the story.
- A proposed change must be a substantive, field-level design decision: silhouette, material, function, construction, iconography or a behavioral constraint. Purely descriptive/rendering vocabulary (cinematic, painterly, high-contrast, warm lighting, dramatic, moody, and similar) appended to otherwise unchanged text is NEVER a valid change — if that is all you would produce, use outcome "already-aligned" instead.
- Keep each field concise: 1-3 sentences, matching the field's existing tone and length. Write in English.
Always respond with a valid JSON object matching exactly one of these two shapes — no other shape, no markdown, no explanation, only the JSON object:

Shape A — the Asset needs changes to align with the Project Style:
{
  "outcome": "changes-proposed",
  "fields": {
    "description": "<full proposed description, or the unchanged current value for a field you are not changing>",
    "notes": "<full proposed notes, or the unchanged current value>",
    "visual_identity": "<full proposed visual identity, or the unchanged current value>",
    "usage_rules": "<full proposed usage rules, or the unchanged current value>",
    "forbidden_variations": "<full proposed forbidden variations, or the unchanged current value>"
  },
  "assessment": "<one concise paragraph summarizing what changed and why>",
  "design_changes": [
    {
      "field": "description" | "notes" | "visual_identity" | "usage_rules" | "forbidden_variations",
      "current_basis": "<the specific current design detail this change replaces or refines>",
      "proposed_decision": "<the specific new design decision — a concrete change to silhouette, material, function, construction, iconography or behavioral constraint; NEVER a purely descriptive/rendering word like cinematic, painterly, high-contrast or warm lighting with no underlying design change>",
      "style_basis": "<the specific Project Style content (World & Design Language, Visual Treatment or an approved rule) this decision is grounded in>"
    }
  ]
}
At least one field in "fields" must differ from its current value, and "design_changes" must contain at least one entry for each field you actually changed (and no entry for a field you left unchanged).

Shape B — the Asset already reflects the Project Style, nothing to change:
{
  "outcome": "already-aligned",
  "fields": {
    "description": "<the exact current value, unchanged>",
    "notes": "<the exact current value, unchanged>",
    "visual_identity": "<the exact current value, unchanged>",
    "usage_rules": "<the exact current value, unchanged>",
    "forbidden_variations": "<the exact current value, unchanged>"
  },
  "assessment": "<one concise paragraph explaining why the Asset already fits>"
}
Every value in "fields" must be byte-identical to the Asset's current value. Do not include "design_changes" in this shape.",
  "user": "Project: Neon Harvest
Pitch: A cyberpunk farmer defends her last crop.
Story: Full narrative synopsis.
Outline: ## Opening
Mara arrives.

Asset: Mara
Type: character
Current description: A cyberpunk farmer.
Current notes: Protagonist.
Current visual identity: Tall, weathered coat.
Current usage rules: Always framed with her tools.
Current forbidden variations: Never smiling.

Project Style:
Neon-lit dystopia.

High contrast, teal and orange.

Never depict corporate logos.

Review "Mara" against the Project Style above and produce exactly one of the two JSON shapes.",
}
`;

exports[`buildAssetAlignmentPrompt > builds the prompt with project background absent and asset fields empty 1`] = `
{
  "system": "You are a production asset supervisor for a film or animation project, reviewing whether one existing Asset's Description, Notes and Asset Bible (Visual Identity, Usage Rules, Forbidden Variations) already reflect the Project's published Style.

Rules:
- Use only the provided Project Story and Project Style as your source of design/world facts. Do not invent story facts or Style content not present in the input.
- Never contradict or discard an existing story fact recorded in the Asset's current fields — a design change must refine HOW something looks/behaves, never rewrite WHAT it fundamentally is in the story.
- A proposed change must be a substantive, field-level design decision: silhouette, material, function, construction, iconography or a behavioral constraint. Purely descriptive/rendering vocabulary (cinematic, painterly, high-contrast, warm lighting, dramatic, moody, and similar) appended to otherwise unchanged text is NEVER a valid change — if that is all you would produce, use outcome "already-aligned" instead.
- Keep each field concise: 1-3 sentences, matching the field's existing tone and length. Write in English.
Always respond with a valid JSON object matching exactly one of these two shapes — no other shape, no markdown, no explanation, only the JSON object:

Shape A — the Asset needs changes to align with the Project Style:
{
  "outcome": "changes-proposed",
  "fields": {
    "description": "<full proposed description, or the unchanged current value for a field you are not changing>",
    "notes": "<full proposed notes, or the unchanged current value>",
    "visual_identity": "<full proposed visual identity, or the unchanged current value>",
    "usage_rules": "<full proposed usage rules, or the unchanged current value>",
    "forbidden_variations": "<full proposed forbidden variations, or the unchanged current value>"
  },
  "assessment": "<one concise paragraph summarizing what changed and why>",
  "design_changes": [
    {
      "field": "description" | "notes" | "visual_identity" | "usage_rules" | "forbidden_variations",
      "current_basis": "<the specific current design detail this change replaces or refines>",
      "proposed_decision": "<the specific new design decision — a concrete change to silhouette, material, function, construction, iconography or behavioral constraint; NEVER a purely descriptive/rendering word like cinematic, painterly, high-contrast or warm lighting with no underlying design change>",
      "style_basis": "<the specific Project Style content (World & Design Language, Visual Treatment or an approved rule) this decision is grounded in>"
    }
  ]
}
At least one field in "fields" must differ from its current value, and "design_changes" must contain at least one entry for each field you actually changed (and no entry for a field you left unchanged).

Shape B — the Asset already reflects the Project Style, nothing to change:
{
  "outcome": "already-aligned",
  "fields": {
    "description": "<the exact current value, unchanged>",
    "notes": "<the exact current value, unchanged>",
    "visual_identity": "<the exact current value, unchanged>",
    "usage_rules": "<the exact current value, unchanged>",
    "forbidden_variations": "<the exact current value, unchanged>"
  },
  "assessment": "<one concise paragraph explaining why the Asset already fits>"
}
Every value in "fields" must be byte-identical to the Asset's current value. Do not include "design_changes" in this shape.",
  "user": "Project: Neon Harvest

Asset: Mara
Type: character
Current description: (none)
Current notes: (none)
Current visual identity: (none)
Current usage rules: (none)
Current forbidden variations: (none)

Project Style:
Neon-lit dystopia.

Review "Mara" against the Project Style above and produce exactly one of the two JSON shapes.",
}
`;
